hotfix: enhance analytics endpoints with pagination support and update email templates