@@ -27,15 +27,21 @@ public abstract class AnalyticHelperService implements IAnalyticHelperService {
 
 	private final AnalyticsRepository analyticsRepository;
 	private final EmailService emailService;
-	private final Pageable pageable = PageRequest.of(0, 100);
 	private final ControlRulesValidators controlRulesValidators;
 
 
-	public AnalyticHelperService(AnalyticsRepository analyticsRepository,
-								 EmailService emailService, ControlRulesValidators controlRulesValidators) {
+	protected AnalyticHelperService(AnalyticsRepository analyticsRepository,
+			EmailService emailService, ControlRulesValidators controlRulesValidators) {
 		this.analyticsRepository = analyticsRepository;
 		this.emailService = emailService;
 		this.controlRulesValidators = controlRulesValidators;
+	}
+
+	// VALIDATION METHODS
+	private void validateResultsNotEmpty(List<?> results, String message) {
+		if (results == null || results.isEmpty()) {
+			throw new CustomGlobalErrorHandling.ResourceNotFoundException(message);
+		}
 	}
 
 	public boolean isAnalyticsNonExistent(AnalyticsDTO values) {
@@ -43,47 +49,20 @@ public abstract class AnalyticHelperService implements IAnalyticHelperService {
 				values.name());
 	}
 
-	private boolean isRuleBroken(AnalyticsDTO record) {
-		String rules = record.rules();
-		return ("+3s".equals(rules) || "-3s".equals(rules) || "-2s".equals(rules) || "+2s".equals(rules))
-				&& !BLACK_LIST.contains(record.name());
+	private boolean isRuleBroken(AnalyticsDTO analyticsDTO) {
+		String rules = analyticsDTO.rules();
+		return ("+3s".equals(rules) || "-3s".equals(rules) || "-2s".equals(rules)
+				|| "+2s".equals(rules));
 	}
 
-	public List<AnalyticsDTO> validateAnalyticsNameExists(List<AnalyticsDTO> results) {
-		if (results.isEmpty()) {
-			throw new CustomGlobalErrorHandling.ResourceNotFoundException("Results not found.");
+	public void ensureNameExists(String name) {
+		if (!analyticsRepository.existsByName(name.toUpperCase())) {
+			throw new CustomGlobalErrorHandling.ResourceNotFoundException(
+					"AnalyticsDTO by name not found");
 		}
-		return results;
 	}
 
-	public List<GroupedResultsByLevelDTO> findAnalyticsWithGroupedResults(String name,
-																		  LocalDateTime startDate, LocalDateTime endDate) {
-		List<GroupedValuesByLevelDTO> analytics =
-				findGroupedAnalyticsByLevel(name, startDate, endDate);
-		Map<String, MeanAndStdDeviationDTO> statsByLevel =
-				analytics.stream().collect(Collectors.toMap(GroupedValuesByLevelDTO::level,
-						group -> computeStatistics(extractRecordValues(group.values()))));
-
-		return analytics.stream()
-				.map(analytic -> new GroupedResultsByLevelDTO(analytic,
-						new GroupedMeanAndStdByLevelDTO(analytic.level(),
-								Collections.singletonList(statsByLevel.get(analytic.level())))))
-				.toList();
-	}
-
-	@Override
-	public List<GroupedValuesByLevelDTO> findGroupedAnalyticsByLevel(String name,
-																	 LocalDateTime startDate, LocalDateTime endDate) {
-		List<AnalyticsDTO> records = analyticsRepository
-				.findByNameAndDateBetweenGroupByLevel(name, startDate, endDate, pageable).stream()
-				.map(AnalyticMapper::toRecord).toList();
-		validateResultsNotEmpty(records, "No analytics found for the given parameters");
-
-		return records.stream().collect(Collectors.groupingBy(AnalyticsDTO::level)).entrySet()
-				.stream().map(entry -> new GroupedValuesByLevelDTO(entry.getKey(), entry.getValue()))
-				.toList();
-	}
-
+	// STATISTICS METHODS
 	private MeanAndStdDeviationDTO computeStatistics(List<Double> values) {
 		double sum = values.stream().mapToDouble(Double::doubleValue).sum();
 		int size = values.size();
@@ -97,11 +76,39 @@ public abstract class AnalyticHelperService implements IAnalyticHelperService {
 		return records.stream().map(AnalyticsDTO::value).toList();
 	}
 
-	private void validateResultsNotEmpty(List<?> results, String message) {
-		if (results == null || results.isEmpty()) {
-			throw new CustomGlobalErrorHandling.ResourceNotFoundException(message);
-		}
+
+	// BUSINESS LOGIC METHODS
+	public List<GroupedResultsByLevelDTO> findAnalyticsWithGroupedResults(String name,
+			LocalDateTime startDate, LocalDateTime endDate, Pageable pageable) {
+		List<GroupedValuesByLevelDTO> analytics =
+				findGroupedAnalyticsByLevel(name, startDate, endDate, pageable);
+		Map<String, MeanAndStdDeviationDTO> statsByLevel =
+				analytics.stream().collect(Collectors.toMap(GroupedValuesByLevelDTO::level,
+						group -> computeStatistics(extractRecordValues(group.values()))));
+
+		return analytics.stream()
+				.map(analytic -> new GroupedResultsByLevelDTO(analytic,
+						new GroupedMeanAndStdByLevelDTO(analytic.level(),
+								Collections.singletonList(statsByLevel.get(analytic.level())))))
+				.toList();
 	}
+
+	@Override
+	public List<GroupedValuesByLevelDTO> findGroupedAnalyticsByLevel(String name,
+			LocalDateTime startDate, LocalDateTime endDate, Pageable pageable) {
+		List<AnalyticsDTO> records = analyticsRepository
+				.findByNameAndDateBetweenGroupByLevel(name, startDate, endDate, pageable).stream()
+				.map(AnalyticMapper::toRecord).toList();
+		validateResultsNotEmpty(records,
+				"No analytics found for the given name and date between parameters");
+
+		return records.stream().collect(Collectors.groupingBy(AnalyticsDTO::level)).entrySet()
+				.stream()
+				.map(entry -> new GroupedValuesByLevelDTO(entry.getKey(), entry.getValue()))
+				.toList();
+	}
+
+
 
 	@Override
 	public List<GroupedMeanAndStdByLevelDTO> returnMeanAndStandardDeviationForGroups(
@@ -114,16 +121,18 @@ public abstract class AnalyticHelperService implements IAnalyticHelperService {
 
 	@Override
 	public Page<AnalyticsDTO> findAnalyticsByNameInAndDateBetweenWithLinks(List<String> names,
-																		   LocalDateTime dateStart, LocalDateTime dateEnd, Pageable pageable) {
+			LocalDateTime dateStart, LocalDateTime dateEnd, Pageable pageable) {
 		return analyticsRepository.findByNameInAndDateBetweenPaged(names, dateStart, dateEnd,
 				pageable);
 	}
 
 	@Override
 	public List<GroupedValuesByLevelDTO> findFilteredGroupedAnalytics(
-			List<GroupedValuesByLevelDTO> records) {
-		return records.stream().filter(this::isGroupedRecordValid)
-				.map(record -> new GroupedValuesByLevelDTO(record.level(), record.values())).toList();
+			List<GroupedValuesByLevelDTO> groupedValuesByLevelDTO) {
+		return groupedValuesByLevelDTO.stream().filter(this::isGroupedRecordValid)
+				.map(groupedValue -> new GroupedValuesByLevelDTO(groupedValue.level(),
+						groupedValue.values()))
+				.toList();
 	}
 
 	@Override
@@ -133,15 +142,15 @@ public abstract class AnalyticHelperService implements IAnalyticHelperService {
 	}
 
 	@Override
-	public boolean isGroupedRecordValid(GroupedValuesByLevelDTO record) {
-		return record.values().stream()
-				.allMatch(genericValuesRecord -> !Objects.equals(genericValuesRecord.rules(), "+3s")
-						&& !Objects.equals(genericValuesRecord.rules(), "-3s"));
+	public boolean isGroupedRecordValid(GroupedValuesByLevelDTO groupedValuesByLevelDTO) {
+		return groupedValuesByLevelDTO.values().stream()
+				.allMatch(groupedValue -> !Objects.equals(groupedValue.rules(), "+3s")
+						&& !Objects.equals(groupedValue.rules(), "-3s"));
 	}
 
 	@Override
-	public boolean isRecordValid(AnalyticsDTO record) {
-		String rules = record.rules();
+	public boolean isRecordValid(AnalyticsDTO analyticsDTO) {
+		String rules = analyticsDTO.rules();
 		return (!Objects.equals(rules, "+3s") || !Objects.equals(rules, "-3s"));
 	}
 
@@ -155,7 +164,7 @@ public abstract class AnalyticHelperService implements IAnalyticHelperService {
 	@Override
 	public void saveNewAnalyticsRecords(List<AnalyticsDTO> valuesOfLevelsList) {
 		var newAnalytics = valuesOfLevelsList.stream().filter(this::isAnalyticsNonExistent)
-				.map(AnalyticMapper::toEntity).collect(Collectors.toList());
+				.map(AnalyticMapper::toEntity).toList();
 
 		if (newAnalytics.isEmpty()) {
 			log.warn("No new analytics records to save.");
@@ -170,9 +179,13 @@ public abstract class AnalyticHelperService implements IAnalyticHelperService {
 		if (notPassedList.isEmpty()) {
 			return;
 		}
+
+		var filteredList = notPassedList.stream()
+				.filter(notPassed -> !BLACK_LIST.contains(notPassed.name())).toList();
+
 		try {
-			var content = controlRulesValidators.validateRules(notPassedList);
-			emailService.sendFailedAnalyticsNotification(notPassedList, content);
+			var content = controlRulesValidators.validateRules(filteredList);
+			emailService.sendFailedAnalyticsNotification(filteredList, content);
 		} catch (Exception e) {
 			log.error("Error sending identifier notification: {}", e.getMessage());
 		}
@@ -196,17 +209,16 @@ public abstract class AnalyticHelperService implements IAnalyticHelperService {
 
 	@Override
 	public Page<AnalyticsDTO> findAnalyticsByNameInByLevelBaseMethod(List<String> names,
-																	 String level, LocalDateTime startDate, LocalDateTime endDate, Pageable pageable) {
-		Page<AnalyticsDTO> results = analyticsRepository
-				.findByNameInAndLevelAndDateBetween(names, level, startDate, endDate, pageable);
+			String level, LocalDateTime startDate, LocalDateTime endDate, Pageable pageable) {
+		Page<AnalyticsDTO> results = analyticsRepository.findByNameInAndLevelAndDateBetween(names,
+				level, startDate, endDate, pageable);
 		validateResultsNotEmpty(results.getContent(),
-				"No analytics found for the given parameters");
+				"No analytics found for the given parameters with pagination");
 		return results;
 	}
 
 	@Override
-	public List<AnalyticsDTO> findAnalyticsByDate(LocalDateTime dateStart,
-												  LocalDateTime dateEnd) {
+	public List<AnalyticsDTO> findAnalyticsByDate(LocalDateTime dateStart, LocalDateTime dateEnd) {
 		List<AnalyticsDTO> results = analyticsRepository.findByDateBetween(dateStart, dateEnd)
 				.stream().map(AnalyticMapper::toRecord).toList();
 		validateResultsNotEmpty(results, "No analytics found for the given date range");
@@ -215,13 +227,9 @@ public abstract class AnalyticHelperService implements IAnalyticHelperService {
 
 	@Override
 	public Page<AnalyticsDTO> findAnalyticsByNameInAndDateBetween(List<String> names,
-																  LocalDateTime dateStart, LocalDateTime dateEnd, Pageable pageable) {
+			LocalDateTime dateStart, LocalDateTime dateEnd, Pageable pageable) {
 		return analyticsRepository.findByNameInAndDateBetween(names, dateStart, dateEnd, pageable);
 	}
-
-	@Override
-	public abstract List<AnalyticsDTO> findAnalyticsByNameAndLevel(Pageable pageable,
-																   String name, String level);
 
 	@Override
 	public void deleteAnalyticsById(Long id) {
@@ -233,21 +241,22 @@ public abstract class AnalyticHelperService implements IAnalyticHelperService {
 	}
 
 	public MeanAndStdDeviationDTO calculateMeanAndStandardDeviation(String name, String level,
-																	LocalDateTime dateStart, LocalDateTime dateEnd) {
+			LocalDateTime dateStart, LocalDateTime dateEnd, Pageable pageable) {
 		List<AnalyticsDTO> values =
-				findAnalyticsByNameAndLevelAndDate(name, level, dateStart, dateEnd).stream()
-						.filter(this::isRecordValid).toList();
-        return computeStatistics(extractRecordValues(values));
+				findAnalyticsByNameAndLevelAndDate(name, level, dateStart, dateEnd, pageable)
+						.stream().filter(this::isRecordValid).toList();
+		return computeStatistics(extractRecordValues(values));
 	}
 
-	public List<GroupedMeanAndStdByLevelDTO> calculateGroupedMeanAndStandardDeviation(
-			String name, LocalDateTime startDate, LocalDateTime endDate) {
+	public List<GroupedMeanAndStdByLevelDTO> calculateGroupedMeanAndStandardDeviation(String name,
+			LocalDateTime startDate, LocalDateTime endDate, Pageable pageable) {
 		List<AnalyticsDTO> records = analyticsRepository
 				.findByNameAndDateBetweenGroupByLevel(name, startDate, endDate, pageable).stream()
 				.map(AnalyticMapper::toRecord).toList();
-		var values = records.stream().collect(Collectors.groupingBy(AnalyticsDTO::level))
-				.entrySet().stream()
-				.map(entry -> new GroupedValuesByLevelDTO(entry.getKey(), entry.getValue())).toList();
+		var values = records.stream().collect(Collectors.groupingBy(AnalyticsDTO::level)).entrySet()
+				.stream()
+				.map(entry -> new GroupedValuesByLevelDTO(entry.getKey(), entry.getValue()))
+				.toList();
 
 		return returnMeanAndStandardDeviationForGroups(values);
 	}
@@ -262,7 +271,7 @@ public abstract class AnalyticHelperService implements IAnalyticHelperService {
 	}
 
 	public List<AnalyticsDTO> findAnalyticsByNameAndLevelWithPagination(Pageable pageable,
-																		String name, String level) {
+			String name, String level) {
 		List<AnalyticsDTO> analyticsList =
 				analyticsRepository.findByNameAndLevel(pageable, name.toUpperCase(), level).stream()
 						.map(AnalyticMapper::toRecord).toList();
@@ -271,19 +280,15 @@ public abstract class AnalyticHelperService implements IAnalyticHelperService {
 	}
 
 	public List<AnalyticsDTO> findAnalyticsByNameLevelAndDate(String name, String level,
-															  LocalDateTime dateStart, LocalDateTime dateEnd) {
+			LocalDateTime dateStart, LocalDateTime dateEnd, Pageable pageable) {
 		ensureNameExists(name);
 		List<AnalyticsDTO> results = analyticsRepository
 				.findByNameAndLevelAndDateBetween(name, level, dateStart, dateEnd, pageable)
 				.stream().map(AnalyticMapper::toRecord).toList();
-		validateResultsNotEmpty(results, "No analytics found for the given parameters");
+		validateResultsNotEmpty(results,
+				"No analytics found for the given name, level, dateStart, dateEnd -> parameters");
 		return results;
 	}
 
-	public void ensureNameExists(String name) {
-		if (!analyticsRepository.existsByName(name.toUpperCase())) {
-			throw new CustomGlobalErrorHandling.ResourceNotFoundException(
-					"AnalyticsDTO by name not found");
-		}
-	}
+
 }
